--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  overflow: hidden;
 
   h1 {
     color: green;
@@ -10,12 +11,26 @@ body {
   }
 }
 
-.wrapper {
-  padding: 1.25rem 1rem;
-}
-
 p {
   //font-weight: 400;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  display: block;
+}
+
+.page {
+  min-height: 100vh;
+}
+
+.wrapper {
+  padding: 1.25rem 1rem;
 }
 
 .app-bar {
@@ -26,6 +41,111 @@ p {
   text-transform: uppercase;
 }
 
+.navigation {
 
+  .nav-links {
+    display: flex;
+    gap: .5rem;
+    //padding-bottom: 1.25rem;
 
+    a {
+      text-decoration: none;
+      color: inherit;
 
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.audio-player {
+  --player-size: 80px;
+
+  background: #eee;
+  height: var(--player-size);
+  width: var(--player-size);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  &::after {
+    --icon-size: 48px;
+
+    display: block;
+    content: '';
+    width: var(--icon-size);
+    height: var(--icon-size);
+    background: no-repeat center url('~/src/assets/media/images/icons/play.svg');
+  }
+
+  &[paused]::after {
+    background-image: url('~/src/assets/media/images/icons/pause.svg');
+  }
+
+  &[loading]::after {
+    background-image: url('~/src/assets/media/images/icons/loading.svg');
+  }
+}
+
+.funin-fixed-player {
+  position: fixed;
+  left: 0;
+  right: 0;
+  background: red;
+  bottom: 0;
+  color: #fff;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+
+  .controls {
+    display: flex;
+    gap: .5rem;
+
+    .prev, .play-pause, .next {
+      --size: 24px;
+      --size: 48px;
+      //--size: 32px;
+
+      height: var(--size);
+      width: var(--size);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      background: white;
+      //margin-bottom: .5rem;
+      margin-bottom: .75rem;
+
+      &::after {
+        --icon-size: 24px;
+
+        content: '';
+        display: block;
+        width: var(--icon-size);
+        height: var(--icon-size);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+      }
+    }
+
+    .prev::after {
+      background-image: url('~/src/assets/media/images/icons/next.svg');
+      transform: rotate(180deg);
+    }
+
+    .play-pause::after {
+      background-image: url('~/src/assets/media/images/icons/play.svg');
+    }
+
+    .play-pause[paused]::after {
+      background-image: url('~/src/assets/media/images/icons/pause.svg');
+    }
+
+    .next::after {
+      background-image: url('~/src/assets/media/images/icons/next.svg');
+    }
+  }
+}
