--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,10 +1,15 @@
 @import '_normalize.css';
 @import '_breakpoints.scss';
 
+html {
+  color-scheme: dark;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  overflow: hidden;
+//  overflow: hidden;
+  overflow-x: hidden;
 
   h1 {
     color: green;
@@ -28,6 +33,7 @@ img {
 
 .page {
   min-height: 100vh;
+  min-height: 240vh;
 }
 
 .wrapper {
@@ -42,22 +48,34 @@ img {
   font-size: 1.2rem;
   text-transform: uppercase;
 
-  box-shadow: inset hoff voff blur #000;
+//  box-shadow: inset hoff voff blur #000;
 }
 
 .header {
-  .top-image {
-    display: flex;
-    justify-content:center;
+  overflow: hidden;
 
-    @include big() {
-      transform: scale(1.5);
-    }
-//    img {
-//      margin: 0 auto;
+  .top-image {
+//    padding-top: calc(180/975 * 1px)
+//    display: flex;
+//    justify-content:center;
+
+//    @include big() {
+//      height: 360px !important;
+//      transform: scale(1.5);
 //    }
+
+    img {
+      margin: 0 auto;
+//      transform: translateY(-25%);
+
+//      @include big() {
+//        height: 360px !important;
+        //      transform: scale(1.5);
+//      }
+    }
   }
 }
+
 .navigation {
 
   .nav-links {
@@ -122,7 +140,7 @@ img {
     gap: .5rem;
 
     .prev, .play-pause, .next {
-      --size: 24px;
+//      --size: 24px;
       --size: 48px;
       //--size: 32px;
 
@@ -150,7 +168,7 @@ img {
     }
 
     .prev::after {
-      background-image: url('~/src/assets/media/images/icons/next.svg');
+//      background-image: url('~/src/assets/media/images/icons/next.svg');
       transform: rotate(180deg);
     }
 
@@ -163,7 +181,7 @@ img {
     }
 
     .next::after {
-      background-image: url('~/src/assets/media/images/icons/next.svg');
+//      background-image: url('~/src/assets/media/images/icons/next.svg');
     }
   }
 }
