update image change and ui

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -48,6 +48,10 @@ img {
   font-size: 1.2rem;
   text-transform: uppercase;
 
+  a {
+    text-decoration: none;
+    color: #fff;
+  }
   //  box-shadow: inset hoff voff blur #000;
 }
 
