extract backButton into a component

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -54,7 +54,9 @@ img {
     gap: 1rem;
   }
 
-  .back-arrow {
+  back-button {
+  //.back-arrow {
+  //  back-button {}
       cursor: pointer;
       display: none;
 
