--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -29,6 +29,7 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
 }
 
 .page {
@@ -51,39 +52,50 @@ img {
   .wrapper {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    //gap: 1rem;
+
+    //> a {
+    //  transition: all 2s;
+    //}
   }
 
-  back-button {
-  //.back-arrow {
-  //  back-button {}
-      cursor: pointer;
-      display: none;
+  .left-side {
+    --offset-left: 'from-js';
 
-      &.visible {
-        display: block;
+    display: flex;
+    transition-property: transform;
+    transition: transform .25s ease-out;
+    transform: translateX(-84px);
+
+    &.visible {
+      transform: translateX(0);
+      transition-timing-function: ease-in;
+
+      back-button {
+        opacity: 1;
+        visibility: visible;
+        //transition-timing-function: ease-in;
+        transition-timing-function: linear;
+      }
+    }
+
+    back-button {
+      cursor: pointer;
+      padding-right: 1rem;
+      transition-property: opacity, visibility;
+      transition-duration: .25 / 2 * 1s;
+      //transition-timing-function: ease-out;
+      transition-timing-function: linear;
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    a {
+      text-decoration: none;
+      color: #fff;
     }
   }
-  //.back-arrow-button {
-  //  cursor: pointer;
-  //  background: transparent;
-  //  box-shadow: none;
-  //  border: none;
-  //  display: inline-flex;
-  //  align-items: center;
-  //  border: 2px solid grey;
-  //
-  //  svg {
-  //    height: 1em;
-  //  }
-  //}
 
-  a {
-    text-decoration: none;
-    color: #fff;
-  }
-
-  //  box-shadow: inset hoff voff blur #000;
 }
 
 .header {
@@ -101,13 +113,20 @@ img {
     img {
       margin: 0 auto;
       position: relative;
-      //opacity: 0;
+      opacity: 0;
       object-fit: cover;
-      //visibility: hidden;
+      visibility: hidden;
+      // mixin hidden
 
       &.visible {
+        // mixin visible
         opacity: 1;
         visibility: visible;
+        //transition-timing-function: ease-in;
+        transition-property: visibility, opacity;
+        transition-timing-function: linear;
+        transition-timing-function: ease-out;
+        transition-duration: .25s;
       }
     }
   }
@@ -183,6 +202,20 @@ album-detail {
     //background: center / cover no-repeat url(https://f4.bcbits.com/img/a2545099157_2.jpg);
     //background: center / cover no-repeat url(https://f4.bcbits.com/img/a2545099157_2.jpg);
     //background-image: url(https://f4.bcbits.com/img/a2545099157_2.jpg);
+
+    img {
+      height: 100%;
+      visibility: hidden;
+      opacity: 0;
+      transition-property: visibility, opacity;
+      transition-timing-function: linear;
+      transition-duration: .25s;
+
+      &.visible {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
   }
 
   .album-info {
