lint; update styles

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,462 +1,14 @@
-@import '_normalize.css';
-@import '_breakpoints.scss';
+@import 'utils-helpers/normalize.css';
+@import 'utils-helpers/breakpoints.scss';
+@import 'common';
+@import 'components/app-bar.scss';
+@import 'components/header.scss';
+@import 'components/navigation.scss';
+@import 'components/loader';
+@import 'components/album-cover.scss';
+@import 'components/album-detail.scss';
+@import 'components/available-albums';
+@import 'components/player';
 
-html {
-  color-scheme: dark;
-}
 
-body {
-  margin: 0;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  //  overflow: hidden;
-  overflow-x: hidden;
 
-  h1 {
-    color: green;
-    font-size: 4rem;
-  }
-}
-
-p {
-  //font-weight: 400;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-}
-
-.page {
-  min-height: 100vh;
-  min-height: 240vh;
-}
-
-.wrapper {
-  padding: 1.25rem 1rem;
-}
-
-.app-bar {
-  //  background: green;
-  //  background: hsl(109 73% 26%);; // roteted cornflowerblue
-  //  color: #fff;
-  //  color: transparent;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-
-  .wrapper {
-    display: flex;
-    align-items: center;
-    //gap: 1rem;
-
-    //> a {
-    //  transition: all 2s;
-    //}
-  }
-
-  .left-side {
-    --offset-left: 'from-js';
-
-    display: flex;
-    transition-property: transform;
-    transition: transform .25s ease-out;
-    transform: translateX(-84px);
-
-    &.visible {
-      transform: translateX(0);
-      transition-timing-function: ease-in;
-
-      back-button {
-        opacity: 1;
-        visibility: visible;
-        //transition-timing-function: ease-in;
-        transition-timing-function: linear;
-      }
-    }
-
-    back-button {
-      cursor: pointer;
-      padding-right: 1rem;
-      transition-property: opacity, visibility;
-      transition-duration: calc(.25 / 2 * 1s);
-      //transition-timing-function: ease-out;
-      transition-timing-function: linear;
-      opacity: 0;
-      visibility: hidden;
-    }
-
-    a {
-      text-decoration: none;
-      color: #fff;
-    }
-  }
-
-}
-
-.header {
-  overflow: hidden;
-
-  .top-image {
-    min-height: 180px; //replace with padding
-    display: grid;
-    place-items: center;
-
-    .loader {
-      display: none;
-    }
-
-    //.image-wrapper {
-    //  position: relative;
-    //}
-
-    img {
-      margin: 0 auto;
-      position: relative;
-      opacity: 0;
-      object-fit: cover;
-      visibility: hidden;
-      // mixin hidden
-      //z-index: 1;
-
-      &.visible {
-        // mixin visible
-        opacity: 1;
-        visibility: visible;
-        //transition-timing-function: ease-in;
-        transition-property: visibility, opacity;
-        transition-timing-function: linear;
-        transition-timing-function: ease-out;
-        transition-duration: .25s;
-      }
-    }
-
-    //.text-wrapper {
-    //  position: absolute;
-    //  top: 0;
-    //  left: 0;
-    //  right: 0;
-    //  bottom: 0;
-    //  display: flex;
-    //  align-items: center;
-    //  justify-content: center;
-    //  font-size: 2.75rem;
-    //  visibility: hidden;
-    //  transition: .25s visibility;
-    //
-    //  &::before {
-    //    content: '';
-    //    position: absolute;
-    //    top: 0;
-    //    left: 0;
-    //    bottom: 0;
-    //    right: 0;
-    //    //background: red;
-    //    //z-index: 1;
-    //    //background: #123;
-    //    //opacity: .4;
-    //  }
-    //
-    //  span {
-    //    position: relative;
-    //    //z-index: 2;
-    //  }
-    //}
-
-    //body[data-404] & img.visible + .text-wrapper {
-    //  visibility: visible;
-    //}
-  }
-}
-
-.navigation {
-  display: none;
-
-  &.visible {
-    display: block;
-  }
-
-  .nav-links {
-    display: flex;
-    //gap: .5rem;
-    gap: 1rem .5rem;
-    //padding-bottom: 1.25rem;
-    flex-wrap: wrap;
-
-    a {
-      text-decoration: none;
-      color: inherit;
-      display: block;
-
-      &:hover {
-        //text-decoration: underline;
-      }
-
-      &.active {
-        //text-decoration: underline;
-        //color: grey;
-
-        //&::before {
-        //  content: '>>>'
-        //}
-      }
-    }
-  }
-}
-
-//.navigation {
-//  display: none;
-//}
-
-album-detail {
-  --wrapper-padding: 1.25rem;
-  //transform: translateY(calc(-50% - var(--wrapper-padding)));
-  //top: calc(-50% - var(--wrapper-padding));
-  top: calc(-144px / 2 - var(--wrapper-padding));
-  position: relative;
-  display: none;
-  text-align: center;
-
-  &.visible {
-    display: block;
-  }
-
-  .album-cover {
-    width: 144px;
-    height: 144px;
-    //background: center / cover no-repeat linear-gradient(13deg, yellow 28%, #22c55e);
-    border: 2px solid #000;
-    border-radius: 7%;
-    margin: 0 auto 1.5rem;
-    overflow: hidden;
-    position: relative;
-
-    .placeholder {
-      background: center / cover no-repeat linear-gradient(13deg, yellow 28%, #22c55e);
-      height: 100%;
-      //filter: hue-rotate(45deg);
-      position: absolute;
-      width: 100%;
-      filter: hue-rotate(45deg) grayscale(.13);
-    }
-
-    img {
-      height: 100%;
-      visibility: hidden;
-      opacity: 0;
-      transition-property: visibility, opacity;
-      //transition-timing-function: linear;
-      transition-timing-function: ease-in;
-      transition-duration: .25s;
-      position: relative;
-
-      &.visible {
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-  }
-
-  .album-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: .5rem;
-
-    .album-name {
-      font-size: 1.4rem;
-    }
-
-    .date-of-release {
-      //color: gray;
-      color: grey;
-    }
-  }
-}
-
-available-groups {
-  ul {
-    display: flex;
-    gap: 0.5rem;
-    flex-wrap: wrap;
-    max-width: 40%;
-
-    a {
-      text-decoration: none;
-      color: white;
-    }
-  }
-
-}
-
-available-albums {
-  display: none;
-
-  &.visible {
-    display: block;
-  }
-
-  .list-wrapper {
-    display: none;
-
-    &.visible {
-      display: block;
-    }
-  }
-
-  ul {
-    display: grid;
-    //    grid-template-columns: repeat(3, 1fr);
-    //    grid-template-columns: repeat(auto-fit, 144px);
-    //    grid-template-columns: ;
-    //  grid-template-columns: repeat(auto-fit, minmax(144px, 1fr));
-    grid-template-columns: repeat(auto-fill, minmax(144px, 1fr));
-    grid-column-gap: .5rem;
-    grid-row-gap: .75rem;
-  }
-
-
-  .album-cover {
-    //    --size: 144px;
-    //
-    //    width: var(--size);
-    //    height: var(--size);
-    //    background: grey;
-    padding-top: 100%;
-    //    background: #22c55e; //tailwind green 500
-    //    background: linear-gradient(55deg, #bef264, #22c55e);
-    // tailwind green
-    //    background: linear-gradient(26deg, #a7f3d0 24%, #22c55e);
-    //    background: linear-gradient(26deg, #86efac 9%, #22c55e);;
-    background: linear-gradient(13deg, yellow 28%, #22c55e);
-    margin-bottom: .4rem;
-  }
-}
-
-.loader {
-  //  --size: 74px;
-  //  --border-width: 10px;
-  --size: 34px;
-  --border-width: 5.5px;
-  //  --rotation-speed: 1s;
-  --rotation-speed: 1.35s;
-
-  width: var(--size);
-  height: var(--size);
-  border: var(--border-width) solid white;
-  border-top: var(--border-width) solid transparent;
-  border-radius: 50%;
-  animation: rotate var(--rotation-speed) infinite linear;
-  position: absolute;
-  z-index: -1;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(135deg);
-  }
-
-  100% {
-    transform: rotate(495deg);
-  }
-}
-
-.audio-player {
-  --player-size: 80px;
-
-  background: #eee;
-  height: var(--player-size);
-  width: var(--player-size);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-
-  display: none;
-
-  &::after {
-    --icon-size: 48px;
-
-    display: block;
-    content: '';
-    width: var(--icon-size);
-    height: var(--icon-size);
-    background: no-repeat center url('~/src/assets/media/images/icons/play.svg');
-  }
-
-  body[data-player-state="true"] &::after {
-    background-image: url('~/src/assets/media/images/icons/pause.svg');
-  }
-
-  //&[loading]::after {
-  //  background-image: url('~/src/assets/media/images/icons/loading.svg');
-  //}
-}
-
-.funin-fixed-player {
-  display: none;
-
-  position: fixed;
-  left: 0;
-  right: 0;
-  //background: red;
-  background: cornflowerblue;
-  bottom: 0;
-  color: #fff;
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-
-  .controls {
-    display: flex;
-    gap: .5rem;
-
-    .prev, .play-pause, .next {
-      //      --size: 24px;
-      --size: 48px;
-      //--size: 32px;
-
-      height: var(--size);
-      width: var(--size);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      background: white;
-      //margin-bottom: .5rem;
-      margin-bottom: .75rem;
-
-      &::after {
-        --icon-size: 24px;
-
-        content: '';
-        display: block;
-        width: var(--icon-size);
-        height: var(--icon-size);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-      }
-    }
-
-    .prev::after {
-      //      background-image: url('~/src/assets/media/images/icons/next.svg');
-      transform: rotate(180deg);
-    }
-
-    & .play-pause::after {
-      background-image: url('~/src/assets/media/images/icons/play.svg');
-    }
-
-    body[data-player-state="true"] & .play-pause::after {
-      background-image: url('~/src/assets/media/images/icons/pause.svg');
-    }
-
-    .next::after {
-      //      background-image: url('~/src/assets/media/images/icons/next.svg');
-    }
-  }
-}
