lint; add components; has errors

--- a/src/assets/styles/components/main-navigation.scss
+++ b/src/assets/styles/components/main-navigation.scss
@@ -1,8 +1,12 @@
-.navigation {
+main-navigation {
   display: none;
+  //transition-property: opacity, visibility;
+  //transition-timing-function: ease-out;
+  //transition-duration: .25s;
 
   &.visible {
     display: block;
+    //transition-timing-function: ease-in;
   }
 
   .nav-links {
