--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,7 +3,7 @@
 @import 'common';
 @import 'components/app-bar.scss';
 @import 'components/header.scss';
-@import 'components/navigation.scss';
+@import 'components/main-navigation.scss';
 @import 'components/loader';
 @import 'components/album-cover.scss';
 @import 'components/album-detail.scss';
