--- a/src/assets/styles/components/tumbler.sass
+++ b/src/assets/styles/components/tumbler.sass
@@ -28,8 +28,8 @@
   will-change: transform
 
 
-.settings-toggler[turned-on]
-  background-color: #222
+.settings-toggler[turned-on] .tumbler-wrapper
+  //background-color: #222
   color: darken(white, 15%)
 
   .tumbler
@@ -41,3 +41,8 @@
 //
 //  .tumbler
 //    transform: translateX(calc(100% - 2px))
+
+
+.setting-list li
+  display: flex
+  justify-content: space-between
