--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -9,7 +9,7 @@
 @import 'components/album-detail.scss';
 @import 'components/available-albums';
 @import 'components/player';
-
+@import 'components/tumbler';
 
 
 .navigation-menu {
