--- a/src/assets/styles/components/tumbler.sass
+++ b/src/assets/styles/components/tumbler.sass
@@ -46,6 +46,9 @@
 //.settings-list
 //  gap: 30px
 
+.setting-list__header
+  margin: 0 0 2.75rem
+
 .settings-list li
   display: flex
   justify-content: space-between
