remove overlay color

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,7 @@
   .overlay {
     position: fixed;
     inset: 0;
-    background: rgba(grey, .6);
+    //background: rgba(grey, .6);
     transition-duration: .5s;
     transition-property: opacity, visibility;
     opacity: 0;
